# promptwars-dr17

./: .env.example  .gitignore  AGENTS.md  BASELINE.md  PROJECT.md  README.md  SECURITY.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: alerts.py  chat.py  dashboard.py  plans.py  profiles.py  weather.py
backend/app/models/: __init__.py  alert.py  cached_response.py  user_profile.py
backend/app/schemas/: __init__.py  alert.py  chat.py  dashboard.py  plan.py  profile.py  weather.py
backend/app/services/: ai_service.py  alert_service.py  cache_service.py  weather_service.py
backend/tests/: conftest.py  test_ai_service.py  test_api.py  test_services.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsCenter.tsx  ChatPanel.tsx  Dashboard.tsx  Navbar.tsx  PrepPlan.tsx  ProfilePicker.tsx
frontend/src/lib/: api.ts  translations.ts  types.ts
